--- a/Daily Report/style2.css
+++ b/Daily Report/style2.css
@@ -378,7 +378,214 @@
     background-color: rgb(136, 237, 163);
     color:white;
 }
-
+.box12 {
+    position: absolute;
+    border: 2px solid #333;
+    top: 430px;
+    left: 55%;
+    width: 80px;
+    height: 45px;
+    text-align: center;
+    background-color: #433c3c;
+    color: white;
+    margin: 50px auto;
+}
+.link12 {
+    text-decoration: none;
+    color:white;
+    font-weight: bold;
+    font-size: 25px;
+    text-align:center;
+}
+.link12:hover {
+    color:#ea6c50;
+}
+.box12:hover {
+    background-color: rgb(136, 237, 163);
+    color:white;
+}
+.box13 {
+    position: absolute;
+    border: 2px solid #333;
+    top: 430px;
+    left: 55%;
+    width: 80px;
+    height: 45px;
+    text-align: center;
+    background-color: #433c3c;
+    color: white;
+    margin: 50px auto;
+}
+.link13 {
+    text-decoration: none;
+    color:white;
+    font-weight: bold;
+    font-size: 25px;
+    text-align:center;
+}
+.link13:hover {
+    color:#ea6c50;
+}
+.box13:hover {
+    background-color: rgb(136, 237, 163);
+    color:white;
+}
+.box14 {
+    position: absolute;
+    border: 2px solid #333;
+    top: 430px;
+    left: 55%;
+    width: 80px;
+    height: 45px;
+    text-align: center;
+    background-color: #433c3c;
+    color: white;
+    margin: 50px auto;
+}
+.link14 {
+    text-decoration: none;
+    color:white;
+    font-weight: bold;
+    font-size: 25px;
+    text-align:center;
+}
+.link14:hover {
+    color:#ea6c50;
+}
+.box14:hover {
+    background-color: rgb(136, 237, 163);
+    color:white;
+}
+.box15 {
+    position: absolute;
+    border: 2px solid #333;
+    top: 430px;
+    left: 55%;
+    width: 80px;
+    height: 45px;
+    text-align: center;
+    background-color: #433c3c;
+    color: white;
+    margin: 50px auto;
+}
+.link15 {
+    text-decoration: none;
+    color:white;
+    font-weight: bold;
+    font-size: 25px;
+    text-align:center;
+}
+.link15:hover {
+    color:#ea6c50;
+}
+.box15:hover {
+    background-color: rgb(136, 237, 163);
+    color:white;
+}
+.box16 {
+    position: absolute;
+    border: 2px solid #333;
+    top: 430px;
+    left: 55%;
+    width: 80px;
+    height: 45px;
+    text-align: center;
+    background-color: #433c3c;
+    color: white;
+    margin: 50px auto;
+}
+.link16 {
+    text-decoration: none;
+    color:white;
+    font-weight: bold;
+    font-size: 25px;
+    text-align:center;
+}
+.link16:hover {
+    color:#ea6c50;
+}
+.box16:hover {
+    background-color: rgb(136, 237, 163);
+    color:white;
+}
+.box17 {
+    position: absolute;
+    border: 2px solid #333;
+    top: 430px;
+    left: 55%;
+    width: 80px;
+    height: 45px;
+    text-align: center;
+    background-color: #433c3c;
+    color: white;
+    margin: 50px auto;
+}
+.link17 {
+    text-decoration: none;
+    color:white;
+    font-weight: bold;
+    font-size: 25px;
+    text-align:center;
+}
+.link17:hover {
+    color:#ea6c50;
+}
+.box17:hover {
+    background-color: rgb(136, 237, 163);
+    color:white;
+}
+.box18 {
+    position: absolute;
+    border: 2px solid #333;
+    top: 430px;
+    left: 55%;
+    width: 80px;
+    height: 45px;
+    text-align: center;
+    background-color: #433c3c;
+    color: white;
+    margin: 50px auto;
+}
+.link18 {
+    text-decoration: none;
+    color:white;
+    font-weight: bold;
+    font-size: 25px;
+    text-align:center;
+}
+.link18:hover {
+    color:#ea6c50;
+}
+.box18:hover {
+    background-color: rgb(136, 237, 163);
+    color:white;
+}
+.box19 {
+    position: absolute;
+    border: 2px solid #333;
+    top: 430px;
+    left: 55%;
+    width: 80px;
+    height: 45px;
+    text-align: center;
+    background-color: #433c3c;
+    color: white;
+    margin: 50px auto;
+}
+.link19 {
+    text-decoration: none;
+    color:white;
+    font-weight: bold;
+    font-size: 25px;
+    text-align:center;
+}
+.link19:hover {
+    color:#ea6c50;
+}
+.box19:hover {
+    background-color: rgb(136, 237, 163);
+    color:white;
+}
 .container .footer {
     width: 1170px;
     height: 200px;
